[gd_scene load_steps=18 format=3 uid="uid://brn7h7850ojyd"]

[ext_resource type="Script" path="res://src/key_door.gd" id="1_v75tu"]
[ext_resource type="Texture2D" uid="uid://hxkbb5kxjqw8" path="res://assets/door.png" id="2_07oqd"]
[ext_resource type="Texture2D" uid="uid://bpml2tco70uj2" path="res://assets/key.png" id="3_xw3tu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jk0w5"]
size = Vector2(38, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijufi"]
size = Vector2(91, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye03t"]
atlas = ExtResource("2_07oqd")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur1k6"]
atlas = ExtResource("2_07oqd")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mewww"]
atlas = ExtResource("2_07oqd")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3k1n"]
atlas = ExtResource("2_07oqd")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1s5q"]
atlas = ExtResource("2_07oqd")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o33ev"]
atlas = ExtResource("2_07oqd")
region = Rect2(320, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sglqp"]
atlas = ExtResource("2_07oqd")
region = Rect2(384, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh62m"]
atlas = ExtResource("2_07oqd")
region = Rect2(448, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6lg5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye03t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur1k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mewww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3k1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1s5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o33ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sglqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh62m")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="Animation" id="Animation_6nrrs"]
resource_name = "key"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Key:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(60, -48), Vector2(38, -48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Key:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4mjwi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Key:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Key:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, -48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Key:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hdqgb"]
_data = {
"RESET": SubResource("Animation_4mjwi"),
"key": SubResource("Animation_6nrrs")
}

[node name="KeyDoor" type="StaticBody2D"]
script = ExtResource("1_v75tu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -19.0
offset_top = -140.0
offset_right = 21.0
offset_bottom = 1.0
color = Color(0.909504, 0.150645, 0.407617, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -67.5)
shape = SubResource("RectangleShape2D_jk0w5")

[node name="pin" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pin"]
position = Vector2(-0.5, -54)
shape = SubResource("RectangleShape2D_ijufi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_6lg5c")

[node name="Key" type="Sprite2D" parent="."]
visible = false
position = Vector2(60, -48)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("3_xw3tu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hdqgb")
}

[connection signal="area_entered" from="pin" to="." method="_on_pin_area_entered"]
[connection signal="area_exited" from="pin" to="." method="_on_pin_area_exited"]
[connection signal="body_entered" from="pin" to="." method="_on_pin_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
